fix(input): fix textare vertical-align and fixed-navbar error #55
affects: @bkui-vue/input

--- a/packages/input/src/input.less
+++ b/packages/input/src/input.less
@@ -64,7 +64,6 @@
     padding: 5px 10px;
     line-height: 1.5;
     text-align: left;
-    vertical-align: middle;
     border: 0;
     outline: none;
     resize: none;
